<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_style"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="130sp"
        android:fontFamily="@font/montserrat_black"
        android:gravity="center"
        android:text="Sign Up"
        android:textAlignment="center"
        android:textColor="#F5F3F3"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_gravity="bottom"
                android:layout_marginStart="34dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/sign_in_account_name"
                android:textSize="30sp"
                android:textStyle="bold" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <EditText
                android:layout_marginStart="30dp"
                android:width="350dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="top"
                android:hint="@string/sign_in_account_name_hint"
                android:textSize="30sp" />
        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_gravity="bottom"
                android:layout_marginStart="34dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="Password"
                android:textSize="30sp"
                android:textStyle="bold" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <EditText
                android:layout_marginStart="30dp"
                android:width="350dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="top"
                android:hint="@string/sign_in_password_hint"
                android:textSize="30sp" />
        </GridLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_gravity="bottom"
                android:layout_marginStart="34dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat_bold"

                android:text="@string/sign_up_account_email"
                android:textSize="30sp"
                android:textStyle="bold" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <EditText
                android:layout_marginStart="30dp"
                android:width="350dp"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="top"
                android:hint="@string/sign_up_account_email_hint"
                android:textSize="30sp" />
        </GridLayout>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/sign_in"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:fontFamily="@font/montserrat_extrabold"
            android:shadowColor="#000000"
            android:text="Sign Up"
            android:textColor="@color/stringApp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/already_account" />

            <TextView
                android:id="@+id/sign_up_to_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/montserrat_regular"
                android:text=" Sign In"
                android:textColor="#0010A2" />
        </LinearLayout>
    </GridLayout>
</LinearLayout>