<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_style"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:text="@string/content_sign_in_activity"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/stringApp"
        android:textStyle="bold"
        android:textSize="50sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="160dp">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">
            <TextView
                android:text="@string/sign_in_account_name"
                android:textSize="30sp"
                android:layout_marginStart="34dp"

                android:layout_marginBottom="10dp"
                android:layout_gravity="bottom"
                android:textStyle="bold"
                />
        </GridLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">
            <EditText
                android:gravity="top"
                android:hint="@string/sign_in_account_name_hint"
                android:textSize="30sp"
                android:width="350dp"
                android:layout_marginStart="30dp"
                />
        </GridLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="160dp">
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">
            <TextView
                android:text="Password"
                android:textSize="30sp"
                android:layout_marginStart="34dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="bottom"
                android:textStyle="bold"
                />
        </GridLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">
            <EditText
                android:gravity="top"
                android:hint="@string/sign_in_password_hint"
                android:textSize="30sp"
                android:width="350dp"
                android:layout_marginStart="30dp"
                />
        </GridLayout>
    </LinearLayout>
    <GridLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <Button
            android:id="@+id/sign_in"
            android:text="Sign In"
            android:layout_marginStart="38dp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/button"
            android:layout_gravity="center"/>
        <Button
            android:text="Sign Up"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/button"
            android:layout_width="150dp"
            android:layout_gravity="center"/>
    </GridLayout>
</LinearLayout>
